--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
     </properties>
+
 
     <dependencies>
         <dependency>
@@ -25,6 +27,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.playwright</groupId>
+            <artifactId>playwright</artifactId>
+            <version>1.40.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -40,6 +48,14 @@
             <artifactId>log4j-slf4j2-impl</artifactId>
             <version>3.0.0-alpha1</version>
         </dependency>
+
+        <!-- Test -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -52,7 +68,7 @@
                         <phase>package</phase>
                         <goals><goal>single</goal></goals>
                         <configuration>
-                            <archive><manifest><mainClass>tak.poc.Main</mainClass></manifest></archive>
+                            <archive><manifest><mainClass>Main</mainClass></manifest></archive>
                             <descriptorRefs><descriptorRef>jar-with-dependencies</descriptorRef></descriptorRefs>
                         </configuration>
                     </execution>
