--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
                         <phase>package</phase>
                         <goals><goal>single</goal></goals>
                         <configuration>
-                            <archive><manifest><mainClass>Main</mainClass></manifest></archive>
+                            <archive><manifest><mainClass>tak.poc.Main</mainClass></manifest></archive>
                             <descriptorRefs><descriptorRef>jar-with-dependencies</descriptorRef></descriptorRefs>
                         </configuration>
                     </execution>
